# flask-restx-marshmallow

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: main.py
examples/app/: __init__.py  config.py  config.py.template  configs.py  utils.py
examples/app/managers/: __init__.py
examples/app/managers/auth_manager/: __init__.py  parameters.py  resources.py  schemas.py
examples/app/managers/role_manager/: __init__.py  parameters.py  resources.py  schemas.py
examples/app/managers/route_manager/: __init__.py  parameters.py  resources.py  schemas.py
examples/app/managers/user_manager/: __init__.py  parameters.py  resources.py  schemas.py
examples/app/models/: __init__.py  roles.py  routes.py  users.py
flask_restx_marshmallow/: __init__.py  api.py  namespace.py  parameter.py  schema.py  sqlalchemy.py  swagger.py  util.py
flask_restx_marshmallow/templates/: index.html  local.html
tests/: conftest.py  test_swagger.py
